# game-and-watch-stm32-rs

./: Cargo.toml  README.md  STM32H7_Series.yaml  memory.x
.cargo/: config.toml
game-and-watch-stm32/: .gdbinit  Cargo.toml  Embed.toml  memory.x
game-and-watch-stm32/assets/: crab_rave.raw_s16le_pcm  crab_rave.raw_s16le_pcm_48k
game-and-watch-stm32/src/: input.rs  lcd.rs  main.rs  spiflash.rs
game-and-watch-stm32/src/utilities_display/: display_target.rs  mod.rs
openocd/: interface_cmsis-dap.cfg
scripts/: program_extflash.sh
