[workspace]
members=[ 
    "game-and-watch-stm32"
]
resolver="2"


[profile.release]
debug = 2


[patch.crates-io]
embassy-time = { git="https://github.com/embassy-rs/embassy", rev = "10c9fbcc99b564d8ece88b32835dbc78a4269b34"}
embassy-time-driver = { git="https://github.com/embassy-rs/embassy", rev = "10c9fbcc99b564d8ece88b32835dbc78a4269b34"}
embassy-executor = { git="https://github.com/embassy-rs/embassy", rev = "10c9fbcc99b564d8ece88b32835dbc78a4269b34"}
embassy-sync = { git = "https://github.com/embassy-rs/embassy" , rev = "10c9fbcc99b564d8ece88b32835dbc78a4269b34"}
embassy-futures = { git = "https://github.com/embassy-rs/embassy" , rev = "10c9fbcc99b564d8ece88b32835dbc78a4269b34"}
